# dummy-data-gen

./: Cargo.toml  README.md  flake.nix
src/: main.rs  schema.json
