[package]
name = "dummy-data-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.36", features = ["tokio", "ssl"] }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
chrono = "0.4"
futures = "0.3"
clap = { version = "4.0", features = ["derive"] }


